--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Pokestore"
+      content="PokeStore"
     />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
 
-    <title>Pokestore</title>
+    <title>PokeStore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
